<resources>
    <string name="cur_lang">en</string>
    <string name="app_name">JustGammon</string>
    <string name="title_activity_game">JustGammon</string>
    <string name="tv_premium_version">JustGammon Premium</string>
    <string name="welcome_message">Welcome to JustGammon!</string>
    <string name="bt_start_game">Start</string>
    <string name="bt_continue_game">Continue</string>
    <string name="bt_settings">Settings…</string>
    <string name="bt_about">About…</string>
    <string name="bt_help">Read the Help…</string>
    <string name="bt_game_mode">Manager…</string>
    <string name="bt_statistics">Statistics…</string>
    <string name="bt_ok">OK</string>
    <string name="bt_close">Close</string>
    <string name="bt_cancel">Cancel</string>
    <string name="bt_save">Save</string>
    <string name="bt_yes">Yes</string>
    <string name="bt_no">No</string>
    <string name="bt_continue">Continue</string>
    <string name="bt_information">Information…</string>
    <string name="info_title">Information</string>
    <string name="bt_close_information">Close information</string>
    <string name="bt_news">News…</string>
    <string name="news_title">News</string>
    <string name="bt_close_news">Close news</string>
    <string name="bt_changelog">Changelog…</string>
    <string name="changelog_title">Changelog</string>
    <string name="bt_close_changelog">Close changelog</string>
    <string name="bt_privacy">Read the Privacy Policy…</string>
    <string name="privacy_title">Privacy Policy</string>
    <string name="bt_close_privacy">Close privacy policy</string>
    <string name="bt_online_statistics">On-line statistics…</string>
    <string name="online_statistics_title">On-line Statistics</string>
    <string name="bt_close_online_statistics">Close on-line statistics</string>
    <string name="no_internet_for_webviews">You are not connected to the Internet.\nThis information is loaded from our site.\nPlease connect to the Internet and try again…</string>
    <string name="help_alert_title">Help and Information</string>
    <string name="bt_close_help">Close help</string>
    <string name="dice_status">%1$d, %2$d</string>
    <string name="dice_blank">A die not rolled yet</string>
    <string name="cd_die_face_available">%1$d, die not used</string>
    <string name="cd_die_face_used">%1$d, die used</string>
    <string name="cd_die_face_used_half">%1$d, die used in a half</string>
    <plurals name="cd_number_of_remaining_moves">
        <item quantity="one">There is %d move left to do.</item>
        <item quantity="other">There are %d remaining moves.</item>
    </plurals>
    <string name="today">today</string>
    <string name="yesterday">yesterday</string>
    <string name="date_format">%1$s, %2$s %3$s %4$s, %5$s:%6$s</string>
    <string name="msg_time">It is %1$s</string>
    <string name="about">About</string>
    <string name="about_title">About JustGammon</string>
    <string name="app_version">JustGammon %1$s</string>
    <string name="app_release_date">The 1.0 version date of release: %1$s</string>
    <string name="app_last_update">The date of this release: %1$s</string>
    <string name="app_creator">Programmed by Emanuel Boboiu (Manu)</string>
    <string name="phone_number">Phone: +40740203043</string>
    <string name="email_address">E-mail: contact@justgammon.com</string>
    <string name="web_address">Web: www.justgammon.com</string>
    <string name="app_credits1">Design created by Iulian Duma</string>
    <string name="app_credits2">Beta testing: %1$s</string>
    <string name="app_credits3">English translation: Emanuel Boboiu</string>
    <string name="mnu_rate">Rate this game!</string>
    <string name="title_rate_app">Rate the game</string>
    <string name="body_rate_app">If you enjoy this game, please rate it in Google Play.\nMore stars help us to be one of the most used backgammon games in Google Play Store and also encourage us to continue working for a better experience using this game.</string>
    <string name="bt_rate">Rate now!</string>
    <string name="bt_not_now">Not now!</string>
    <string name="information">Information</string>
    <string name="error">Error</string>
    <string name="warning">Warning</string>
    <string name="no_connection_available">We detect there is no a connection available.\n Please connect your device to the Internet and try again.</string>
    <string name="cd_bt_play">Start a new game</string>
    <string name="cd_bt_pause">Pause this game</string>
    <string name="cd_bt_resume">Resume this game</string>
    <string name="cd_bt_statistics">Show game statistics and information</string>
    <string name="cd_bt_options">More options</string>
    <string name="cd_position_status">%1$s %2$s.</string>
    <string name="cd_empty">Empty</string>
    <string name="cd_almost_taken">%1$s. A checker here is in hand.</string>
    <string name="cd_hint_can_put">%1$s. The checker can be put here.</string>
    <string name="cd_hint_can_enter">%1$s. Checker can re-enter here.</string>
    <plurals name="cd_number_of_white_pulls">
        <item quantity="one">%d white</item>
        <item quantity="other">%d whites</item>
    </plurals>
    <plurals name="cd_number_of_black_pulls">
        <item quantity="one">%d black</item>
        <item quantity="other">%d blacks</item>
    </plurals>
    <string-array name="colors_array">
        <item>Empty</item>
        <item>white</item>
        <item>black</item>
    </string-array>
    <string name="cd_border">Border</string>
    <string name="cd_border_status">%1$s %2$s.</string>
    <string-array name="borders_names_array">
        <item>Lower right border:</item>
        <item>Upper right border:</item>
        <item>Lower middle border:</item>
        <item>Upper middle border:</item>
        <item>Lower left border</item>
        <item>Upper left border</item>
    </string-array>
    <string name="title_activity_settings">Settings</string>
    <string name="close_settings">Close settings</string>
    <string name="bt_reset_to_defaults">Reset to default settings…</string>
    <string name="title_default_settings">Default Settings</string>
    <string name="body_default_settings">Do you want to reset the game?\nAll the settings will be set to their default values.\nIf you bought the Premium Version via Google Play Store, the game will be promoted to Premium at its next load.\nYou can also enter the code to promote manually the game to Premium.</string>
    <string name="sm_bt_general_settings">General…</string>
    <string name="sm_bt_close_general_settings">Close general settings</string>
    <string name="sm_heading_general_settings">General Settings</string>
    <string name="sm_enable_vibration">Enable vibration effects for various actions</string>
    <string name="sm_enable_screen_awake">Keep screen awake during a match</string>
    <string name="sm_enable_clock_cuckoo">Enable automatic time announcement</string>
    <string name="sm_enable_save_history">Enable automatic save of game history</string>
    <string name="sm_bt_sounds_settings">Sounds…</string>
    <string name="sm_bt_close_sounds_settings">Close sounds settings</string>
    <string name="sm_heading_sounds_settings">Sounds Settings</string>
    <string name="sm_enable_sounds">Enable sound effects for various actions</string>
    <string name="sm_enable_music">Enable sound ambiance during the game</string>
    <string name="sm_sound_volume">Choose the percentage of media volume for sounds volume:</string>
    <string name="sm_enable_background_menu">Enable background music in main menu</string>
    <string name="sm_heading_sounds_choose">Check the sounds you want during the game:</string>
    <string name="sm_bt_accessibility_settings">Accessibility…</string>
    <string name="sm_speak_type">Verbalization of the actions during the game:</string>
    <string name="sm_speak_type_0">No verbalization of actions</string>
    <string name="sm_speak_type_1">Verbalize via live region (available for Android 4.4 or newer)</string>
    <string name="sm_speak_type_2">Verbalize directly through TTS</string>
    <string name="sm_speak_type_3">Automatic detection of the suitable verbalization mode</string>
    <string name="sm_bt_tts_settings">TTS Settings (useful if verbalisation is via TTS)</string>
    <string name="sm_board_notation">Board positions notation:</string>
    <string name="sm_board_notation_1">Positions from 1 to 12, sides A and B</string>
    <string name="sm_board_notation_2">Positions from 1 to 24</string>
    <string name="sm_board_notation_0">Don\'t label the positions</string>
    <string name="sm_tv_note_hint_content_description">Note:\nDisabling hints for taken checker, where to put and/or where to re-enter in Visual settings, will disable also the content description hints for screen readers.</string>
    <string name="sm_bt_language_settings">Language…</string>
    <string name="sm_bt_visual_settings">Visual…</string>
    <string name="sm_animations_heading">Animations for actions and hints</string>
    <string name="sm_cbt_anim_hint_where_put">Hint for valid positions to move a checker</string>
    <string name="sm_cbt_anim_hint_where_enter">Hint for valid positions to re-enter from the bar</string>
    <string name="sm_cbt_anim_hint_where_taken">Indicate the position from which a piece was taken</string>
    <string name="sm_cbt_show_arrange_board">Show board arranging effect</string>
    <string name="tv_game_types_note_message">Note:\nAll the settings in manager are saved at clicks, no Save button is needed.</string>
    <string name="tv_game_type_settings_title_2">Settings for games against Bot AI</string>
    <string name="tv_choose_difficulty_level">Choose the difficulty level:</string>
    <string name="mng_difficulty_level_1">Easy (level 1)</string>
    <string name="mng_difficulty_level_2">Hard (level 2)</string>
    <string name="mng_bt_change_nickname">Change your nickname…</string>
    <string name="mng_bt_change_showing_moves">Change how to display Bot\'s moves…</string>
    <string name="mng_bt_reset_score">Reset the score to 0 – 0</string>
    <string name="cm_abandon">Abandon current game</string>
    <string name="cm_open">Open a saved game</string>
    <string name="cm_save">Save current game</string>
    <string name="cm_help">Read JustGammon Help</string>
    <string name="cm_rate">Rate JustGammon</string>
    <string name="sm_cbt_announce_all_in_home_boards">Announce when all checkers are in home board</string>
    <string name="tv_game_type_settings_title_0">Settings for games between two Bots</string>
    <string name="sm_chb_accessible_checkers">Use green and red checkers to improve accessibility for visually impaired users</string>
    <string name="sm_tv_choose_orientation">Choose the orientation in Main Menu and Settings</string>
    <string name="sm_rb_orientation_0">Automatic detection</string>
    <string name="sm_rb_orientation_1">Portrait forced</string>
    <string name="sm_rb_orientation_2">Landscape forced</string>
</resources>