<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layoutSecond"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:isScrollContainer="false"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <CheckBox
            android:id="@+id/cbtAccessibleThemeSetting"
            style="@style/style_check_boxes_in_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onCheckboxClicked"
            android:text="@string/sm_chb_accessible_checkers" />

        <!-- Board notation, three radio buttons: -->

        <TextView
            style="@style/textInSettingsHeadingsStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sm_board_notation" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:orientation="vertical" >

            <RadioButton
                android:id="@+id/rbNotation1"
                style="@style/style_radio_buttons_in_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/sm_board_notation_1" />

            <RadioButton
                android:id="@+id/rbNotation2"
                style="@style/style_radio_buttons_in_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/sm_board_notation_2" />

            <RadioButton
                android:id="@+id/rbNotation0"
                style="@style/style_radio_buttons_in_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/sm_board_notation_0" />
        </RadioGroup>

        <TextView
            style="@style/textInSettingsHeadingsStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sm_speak_type" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:orientation="vertical" >

            <RadioButton
                android:id="@+id/rbSpeechType1"
                style="@style/style_radio_buttons_in_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/sm_speak_type_1" />

            <RadioButton
                android:id="@+id/rbSpeechType2"
                style="@style/style_radio_buttons_in_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/sm_speak_type_2" />

            <RadioButton
                android:id="@+id/rbSpeechType0"
                style="@style/style_radio_buttons_in_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/sm_speak_type_0" />

            <RadioButton
                android:id="@+id/rbSpeechType3"
                style="@style/style_radio_buttons_in_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/sm_speak_type_3" />
        </RadioGroup>

        <!-- A button for TTS settings: -->

        <Button
            android:id="@+id/btTTSSettings"
            style="@style/style_buttons_in_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="settings"
            android:text="@string/sm_bt_tts_settings" />

        <TextView
            style="@style/textInSettingsStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sm_tv_note_hint_content_description" />
    </LinearLayout>

</ScrollView>