<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layoutSecond"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:isScrollContainer="false"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <!-- Orientation zone: -->

        <TextView
            style="@style/textInSettingsHeadingsStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sm_tv_choose_orientation" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:orientation="vertical" >

            <RadioButton
                android:id="@+id/rbOrientation0"
                style="@style/style_radio_buttons_in_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/sm_rb_orientation_0" />

            <RadioButton
                android:id="@+id/rbOrientation1"
                style="@style/style_radio_buttons_in_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/sm_rb_orientation_1" />

            <RadioButton
                android:id="@+id/rbOrientation2"
                style="@style/style_radio_buttons_in_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/sm_rb_orientation_2" />
        </RadioGroup>

        <TextView
            style="@style/textInSettingsHeadingsStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sm_animations_heading" />

        <CheckBox
            android:id="@+id/cbtShowBoardArrangingSetting"
            style="@style/style_check_boxes_in_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onCheckboxClicked"
            android:text="@string/sm_cbt_show_arrange_board" />

        <CheckBox
            android:id="@+id/cbtAnimHintWherePutSetting"
            style="@style/style_check_boxes_in_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onCheckboxClicked"
            android:text="@string/sm_cbt_anim_hint_where_put" />

        <CheckBox
            android:id="@+id/cbtAnimHintWhereEnterSetting"
            style="@style/style_check_boxes_in_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onCheckboxClicked"
            android:text="@string/sm_cbt_anim_hint_where_enter" />

        <CheckBox
            android:id="@+id/cbtAnimHintWhereTakenSetting"
            style="@style/style_check_boxes_in_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onCheckboxClicked"
            android:text="@string/sm_cbt_anim_hint_where_taken" />

        <CheckBox
            android:id="@+id/cbtHintIsAllInHomeBoardSetting"
            style="@style/style_check_boxes_in_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onCheckboxClicked"
            android:text="@string/sm_cbt_announce_all_in_home_boards" />
    </LinearLayout>

</ScrollView>