<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layoutMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:isScrollContainer="false"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btAbout"
            style="@style/style_buttons_in_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="showAbout"
            android:text="@string/bt_about" />

        <Button
            android:id="@+id/btRateApp"
            style="@style/style_buttons_in_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="rateTheApp"
            android:text="@string/mnu_rate" />

        <Button
            android:id="@+id/btOnlineStatistics"
            style="@style/style_buttons_in_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="showOnlineStatistics"
            android:text="@string/bt_online_statistics" />

        <Button
            android:id="@+id/btNews"
            style="@style/style_buttons_in_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="showNews"
            android:text="@string/bt_news" />

        <Button
            android:id="@+id/btHelp"
            style="@style/style_buttons_in_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="showHelp"
            android:text="@string/bt_help" />

        <Button
            android:id="@+id/btChangelog"
            style="@style/style_buttons_in_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="showChangelog"
            android:text="@string/bt_changelog" />

        <Button
            android:id="@+id/btPrivacy"
            style="@style/style_buttons_in_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="showPrivacy"
            android:text="@string/bt_privacy" />
    </LinearLayout>

</ScrollView>