<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layoutAbout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:isScrollContainer="false"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tvAppVersion"
            style="@style/about_dialog_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvLastUpdate"
            style="@style/about_dialog_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvAppReleaseDate"
            style="@style/about_dialog_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/about_dialog_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_credits1" />

        <TextView
            style="@style/about_dialog_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_creator" />

        <TextView
            android:id="@+id/tvPhoneNumber"
            style="@style/about_dialog_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="phone"
            android:text="@string/phone_number" />

        <TextView
            android:id="@+id/tvEmailAddress"
            style="@style/about_dialog_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="email"
            android:text="@string/email_address" />

        <TextView
            android:id="@+id/tvWebAddress"
            style="@style/about_dialog_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:text="@string/web_address" />

        <TextView
            style="@style/about_dialog_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_credits3" />

        <TextView
            android:id="@+id/tvBetaTesters"
            style="@style/about_dialog_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_credits2" />
    </LinearLayout>

</ScrollView>