<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layoutMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:isScrollContainer="false"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btGeneralSettings"
            style="@style/style_buttons_in_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="settings"
            android:text="@string/sm_bt_general_settings" />

        <Button
            android:id="@+id/btVisualSettings"
            style="@style/style_buttons_in_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="settings"
            android:text="@string/sm_bt_visual_settings" />

        <Button
            android:id="@+id/btSoundsSettings"
            style="@style/style_buttons_in_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="settings"
            android:text="@string/sm_bt_sounds_settings" />

        <Button
            android:id="@+id/btAccessibilitySettings"
            style="@style/style_buttons_in_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="settings"
            android:text="@string/sm_bt_accessibility_settings" />

        <Button
            android:id="@+id/btLanguageSettings"
            style="@style/style_buttons_in_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="settings"
            android:text="@string/sm_bt_language_settings" />

        <Button
            android:id="@+id/btResetDefaults"
            style="@style/style_buttons_in_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="resetToDefaults"
            android:text="@string/bt_reset_to_defaults" />
    </LinearLayout>

</ScrollView>